# rust-todo-list

./: Cargo.toml  README.md  sqlite.db  sqlite.db-shm  sqlite.db-wal
src/: main.rs  todo.rs
