[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
console = "0.15.8"
crossterm = "0.28.1"
futures = "0.3.30"
inquire = "0.7.5"
ratatui = "0.28.1"
rusqlite = "0.32.1"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "sqlite"] }
tokio = {version = "1.40.0", features = ["full"] }
tui = "0.19.0"
